Encryption logic added

--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "@types/react": "^16.9.13",
     "@types/react-dom": "^16.9.4",
     "bcrypt": "^4.0.1",
+    "crypto-js": "^4.0.0",
     "fs-extra": "^9.0.0",
     "glob": "^7.1.6",
     "markdown-it": "^11.0.0",
+    "markdown-it-custom-block": "^0.1.1",
     "nedb": "^1.8.0",
     "path": "^0.12.7",
     "react": "^16.13.1",
